objects/CAG_Order_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>External_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Number__c</fullName>
        <description>Field to be populated through data load. Data in this field comes from order history</description>
        <label>Delivery Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Details__c</fullName>
        <label>Order Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>SAP Customer ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CAG Order History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{00000}</displayFormat>
        <label>Orders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAG Order History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>